--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.7.3"
+    "mongoose": "^8.7.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
